[package]
name = "zusammen"
version = "0.1.1"
edition = "2021"
description = "Download files in parallel"
license = "MIT"
readme = "README.md"
repository = "https://github.com/farshed/zusammen"
homepage = "https://github.com/farshed/zusammen"
documentation = "https://github.com/farshed/zusammen"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"